--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: 'AIzaSyBhkHF7UgeQzLWB2hn5rDeeJV5hVit-OHM',
-        authDomain: 'aulac35-139f6.firebaseapp.com',
-        databaseURL: 'https://aulac35-139f6-default-rtdb.firebaseio.com',
-        projectId: 'aulac35-139f6',
-        storageBucket: 'aulac35-139f6.appspot.com',
-        messagingSenderId: '1061321251553',
-        appId: '1:1061321251553:web:a409f3def35d2fe7c9f5a0'
+        apiKey: 'AIzaSyBPFsyzguiUkgH9YK_RLktlm15zhcWvg4Q',
+        authDomain: 'marinac35-758fd.firebaseapp.com',
+        databaseURL: 'https://marinac35-758fd-default-rtdb.firebaseio.com',
+        projectId: 'marinac35-758fd',
+        storageBucket: 'marinac35-758fd.appspot.com',
+        messagingSenderId: '581463610029',
+        appId: '1:581463610029:web:b304f48c3c9cf37327ac24'
       }
 
       // Initialize Firebase
